objects/Test_Step__c.object
<CustomObject>
    <description>Test Step contains steps to be performed related to a Test Case</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Test Step</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <description>Expected result when the Test Step is performed</description>
        <label>Expected Result</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Test Steps</relationshipLabel>
        <relationshipName>Test_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Step</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Test Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>